added IDocItemGenerator to customize pages generated added OverloadsGenerator to put constructor and method overloads in the same page (closes #139)

--- a/source/DefaultDocumentation.Console/Properties/launchSettings.json
+++ b/source/DefaultDocumentation.Console/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "DefaultDocumentation.Console": {
       "commandName": "Project",
-      "commandLineArgs": "--ConfigurationFilePath D:\\Projects\\DefaultDocumentation\\source\\DefaultDocumentation.Api\\DefaultDocumentation.json",
+      "commandLineArgs": "--ConfigurationFilePath D:\\Projects\\DefaultDocumentation\\source\\DefaultDocumentation.Markdown\\DefaultDocumentation.json",
       "workingDirectory": "D:\\Projects\\DefaultDocumentation"
     }
   }
