--- a/source/Sample/DefaultDocumentation.PluginExample/DefaultDocumentation.PluginExample.csproj
+++ b/source/Sample/DefaultDocumentation.PluginExample/DefaultDocumentation.PluginExample.csproj
@@ -7,7 +7,9 @@
     <SignAssembly>false</SignAssembly>
 
     
+    <!-- to remove-->
     <IsPackable>false</IsPackable>
+    
     <DevelopmentDependency>true</DevelopmentDependency>
     <SuppressDependenciesWhenPacking>true</SuppressDependenciesWhenPacking>
     
@@ -18,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="DefaultDocumentation.Api" Version="0.8.2" />
+    <PackageReference Include="DefaultDocumentation.Api" Version="0.9.0-beta01" />
   </ItemGroup>
 
   <Import Project="..\..\DefaultDocumentation.Internal\DefaultDocumentation.Internal.projitems" Label="Shared" />
