fixed LogLevel not being able to be set when using the msbuild task (fixes #192)

--- a/source/DefaultDocumentation/DefaultDocumentation.targets
+++ b/source/DefaultDocumentation/DefaultDocumentation.targets
@@ -43,7 +43,7 @@
 		</EnsureDefaultDocumentationExternLinksFilesRooted>
 
 		<DefaultDocumentationTask
-			LogLevel="$(DefaultDocumentationLogLevel)"
+			LogLevelString="$(DefaultDocumentationLogLevel)"
 			ConfigurationFilePath="$(_DefaultDocumentationConfigurationFile)"
 			AssemblyFilePath="$(TargetPath)"
 			DocumentationFilePath="$(_DefaultDocumentationDocumentationFile)"
