maybe fixed the ci package push

--- a/.github/workflows/ContinuousIntegration.yml
+++ b/.github/workflows/ContinuousIntegration.yml
@@ -42,3 +42,5 @@ jobs:
 
     - name: Publish packages
       run: dotnet nuget push build\*.nupkg
+      env:
+        NUGET_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
