--- a/source/DefaultDocumentation.Console/DefaultDocumentation.Console.csproj
+++ b/source/DefaultDocumentation.Console/DefaultDocumentation.Console.csproj
@@ -5,6 +5,7 @@
     <TargetFrameworks>
       net8.0;
       net9.0;
+      net10.0;
     </TargetFrameworks>
     <OutputType>Exe</OutputType>
     <RootNamespace>DefaultDocumentation</RootNamespace>
