--- a/source/DefaultDocumentation.Test/DefaultDocumentation.Test.csproj
+++ b/source/DefaultDocumentation.Test/DefaultDocumentation.Test.csproj
@@ -1,12 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <RootNamespace>DefaultDocumentation</RootNamespace>
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
+    
+    <NoWarn>
+      <!-- Warning because of Microsoft.Bcl.AsyncInterfaces -->
+      MSB3277
+    </NoWarn>
     
   </PropertyGroup>
 
@@ -20,8 +25,8 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageReference Include="NFluent" Version="3.1.0" />
     <PackageReference Include="NSubstitute" Version="5.3.0" />
-    <PackageReference Include="xunit" Version="2.9.3" />
-    
+    <PackageReference Include="xunit.v3" Version="3.2.2" />
+
     <PackageReference Include="coverlet.msbuild" Version="8.0.0" PrivateAssets="all" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5" PrivateAssets="all" />
     
